--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 CVS
 .cvsignore
 
+# exec + parser + scanner
+
+xpl
+xpl_parser.output
+xpl_parser.tab.h
+xpl_parser.tab.c
+xpl_scanner.cpp
+
+# Others
+
+com-notes.todo
+*.o
